# patent_rag

./: .env.example  .gitignore  Dockerfile  GUI_DEVELOPMENT_GUIDE.md  README.md  SETUP_GUIDE.md  debug_generator.py  debug_retriever.py  pyproject.toml  requirements_backup.txt  sample.py
data/: add_table_name.py  cleaning_doc_number_column.py  modify_doc_mumber.py  numpy_file.py  process_path.py
data/gui/: uploaded_query.txt
data/path/: B_path_01.csv  patent_path_numpy.npy
doc/: BigQueryスキーマ設定.md  Cloud Run更新手順.md  CloudRunデプロイ手順.md  CoundRunデプロイ手順.md  GENIAC-PRIZE提案書.md  README_旧.md
eval/: CSV1_先頭40件.csv  eval.ipynb  rag_output.csv  rag_output_with_TF.csv
eval/absract_claims/: 1_2011086509.json  q_2010000068.json  q_2011213351.json  q_2013224028.json  q_2015039043.json  top_k_JP-2013224028-A.json
eval/ai_judge/: 0_2013086509.json  2013086509.json
eval/dataset02/: rag_output.csv  rag_output.csv_TF.csv  rag_output.csv_score.csv  rag_score.csv  藤原さん.csv  藤原さん.csv_TF.csv  藤原さん.csv_score.csv
eval/dataset02_300/: rag_output.csv  rag_output_with_TF.csv
eval/dataset02_50/: rag_output.csv  rag_score.csv
eval/topk/: JP-2013224028-A.csv  JP-2015039043-A.csv  similar_patents_JP-2010000001-A.csv
eval/uploaded/: uploaded_query.txt
src/: gui.py  main.py
src/app/: generator.py  rag.py  retriever.py
src/bigquery/: big_query_preparation.py  big_query_preperation.py  big_query_topk.py  patent_lookup.py  search_path_from_file.py
src/infra/: config.py
src/llm/: llm_data_loader.py  llm_pipeline.py
src/model/: patent.py
test_data/JP2013044086A/: text.txt
(+290 files in other folders)
