[project]
name = "geniac04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jq>=1.10.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.32",
    "lxml>=6.0.1",
    "openai>=1.106.1",
    "pandas>=2.3.2",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.ruff]
line-length = 180
