[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patent-rag"
version = "0.1.0"
description = "Patent RAG System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-dtypes>=1.3.1",
    "google-cloud-bigquery>=3.28.0",
    "google-generativeai>=0.8.5",
    "jq>=1.10.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "lxml>=6.0.1",
    "openai>=1.106.1",
    "pandas>=2.3.2",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.ruff]
line-length = 180
